# alph-cli

./: .gitignore  .pre-commit-config.yaml  README.md  SKILL.md  overview-updates.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
man/: alph.1
src/alph/: __init__.py  cli.py  core.py  mcp_server.py  remote.py
tests/: conftest.py  human_test.sh  test_barrel.py  test_cli.py  test_core.py  test_mcp_server.py  test_remote.py  test_search.py
