[project]
name = "alph-cli"
version = "0.1.0"
description = "Alpheus Context Engine Framework CLI"
authors = [
    {name = "Chase Pettet"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
alph = "alph.cli:app"

[tool.poetry]
packages = [{include = "alph", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
mypy = ">=1.10"
ruff = ">=0.4"
types-PyYAML = ">=6.0"
types-jsonschema = ">=4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/alph"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short"
