[project]
name = "alph-cli"
version = "0.1.43"
description = "Alpheus Context Engine Framework CLI"
authors = [
    {name = "Chase Pettet"}
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "fastmcp>=3.0",
    "ruamel-yaml (>=0.18)",
]

[project.scripts]
alph = "alph.cli:app"
alph-mcp = "alph.mcp_server:main"

[tool.poetry]
packages = [{include = "alph", from = "src"}]
include = [{path = "man", format = "sdist"}, {path = "SKILL.md", format = "sdist"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
mypy = ">=1.10"
ruff = ">=0.4"
types-PyYAML = ">=6.0"
types-jsonschema = ">=4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/alph"]

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # typer.Option() in defaults is idiomatic Typer usage

[tool.ruff.lint.per-file-ignores]
"src/alph/core.py" = ["E501"]      # docstrings and comments are intentionally long
"src/alph/cli.py" = ["E501"]       # CLI help strings are intentionally long
"src/alph/mcp_server.py" = ["E501"]  # MCP docstrings are intentionally long
"tests/*.py" = ["E501"]            # test docstrings and inline data are intentionally long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short"
